--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -22,7 +22,7 @@
 					<div class="hero-content">
 						<h1>Natural forest</h1>
 						<div class="hero-content__p">Here you can find everything about forest</div>
-						<a class="button-start" href="{{ url_for('form_page') }}">Start searching</a>
+						<a class="button-start" href="{{ url_for('chat_page') }}">Start searching</a>
 					</div>
 				</div>
 				<div class="layers__item layer-4">
